# program-bitmap

./: Anchor.toml  copy_idl.sh  idl.json  package.json  readme.md  tsconfig.json
app/: cli.ts  commands.ts  idl.json
lib/: BitmapReader.ts
migrations/: deploy.ts
programs/program-bitmap/: Cargo.toml
programs/program-bitmap/src/: bitmap.rs  lib.rs
tests/: program-bitmap.js  program-bitmap.ts
